src/components/NavBarComponent/NavBarComponent.css
.navbar{
    background-color: var(--black01);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
    position: fixed;
    width: 100%;
    z-index: 1000000;
    height: 68px;
    box-shadow: 0px 4px 8px 0px #1b1b1b7a;
}

nav.scrolled {
    border-bottom: 2px solid var(--gold26)
}

.navbar .brand{
    display: flex;
    align-items: center;
    gap: 8px;
}

.navbar .brand span{
    font-size: 16px;
    font-weight: 400;
    line-height: 100%;
    letter-spacing: 0;
    color: var(--white-color);
}

.nav-menu{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
    list-style: none;
}

.nav-menu li a{
    text-decoration: none;
    font-weight: 400;
    font-size: 16px;
    color: var(--white-color);
    line-height: 21px;
}

/* ===========================
   Active link styling
   =========================== */
.nav-menu li a.active {
    border-bottom: 1px solid var(--gold26);
    padding-bottom: 4px;
    color: var(--gold26);
}


.nav-icons{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 12px;
    list-style: none;
}

.toggle-btn {
    display: none;
    background: transparent;
    border: none;
}

.mobileLanguageWrapper {
    display: none;
    justify-content: stretch;
    align-items: stretch;
}

.mobileLanguageWrapper .language-dropdown{
    display: none;
}

.mode-icon{
  width: 30px;
  height: 27px;
  color: var(--grey-black);
}

@media(max-width: 992px){
    .navbar .brand span{
        line-height: 24px;
    }

   .toggle-btn {
        display: block;
    }  
    
    .nav-menu,
    .nav-icons{
        display: none;
    }

    .nav-menu{
        flex-direction: column;
        position: absolute;
        align-items: stretch;
        top: 67px;
        left: 0;
        width: 100%;
        background-color: var(--black15);
        gap: 32px;
        padding-top: 0;
        max-height: 0;
        overflow: hidden;
        opacity: 0;
        visibility: hidden;
        transition: all 0.4s ease-in-out;
        z-index: 999999999;
        padding: 0 4.4444% 50px 4.4444%;
    }

    .responsiveNav {
        display: flex;
        padding-top: 32px;
        max-height: 100vh;
        opacity: 1;
        visibility: visible;
        box-shadow: 0px 4px 8px 0px #1b1b1b7a;
    }

    .mobileLanguageWrapper {
        display: flex;
    }

    .mobileLanguageWrapper .language-dropdown{
        display: block;
    }

    .theme-toggle {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 10px;
    }

    .theme-toggle span {
        color: var(--grey-black);
    }

    .theme-toggle .btns {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        gap: 6px;
        border: none;
        border-radius: 16px;
        background-color: var(--black15);
        border: 1px solid var(--gold26);
        padding: 6px;
        cursor: pointer;
        transition: background-color 0.3s ease;
    }

    .theme-toggle .btns svg {
        width: 22px;
        height: 22px;
    }

    .theme-toggle .btns svg.active{
        background-color: var(--gold26);
        border-radius: 50%;
        padding: 2px;
        color: var(--black-color);
    }

}

